# sshub

./: .gitignore  .prettierignore  Makefile  README.md  manage.py  package.json  pyproject.toml
core/: admin.py  consumers.py  execution.py  fields.py  models.py  routing.py  ssh.py  views.py  widgets.py
core/management/commands/: ssh_run.py
core/migrations/: 0001_initial.py
core/static/core/js/: codemirror_init.js  ssh_terminal.js
core/templates/admin/core/snippet/: run_on.html
core/templates/core/: snippet_batch_results.html  ssh_terminal.html
core/templates/core/widgets/: codemirror.html  live_output.html
sshub/: asgi.py  settings.py  urls.py  wsgi.py
